# strings

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  configure
.github/workflows/: multiarch.yml
benchmarks/: CMakeLists.txt  base64_bench.cpp  base_bench.cpp  common.h  hash_bench.cpp  hex_bench.cpp  main.cpp  str_bench.cpp
cmake/: ProjectGuard.cmake  common.cmake
examples/: CMakeLists.txt  main.cpp
include/: strings.hpp
include/strings/: aes128.h  base64.h  core.h  hex.h  md5.h  object.h  pack.h  sha1.h
src/: aes128.cpp  base64.cpp  core.cpp  hex.cpp  md5.cpp  object.cpp  pack.cpp  sha1.cpp
src/detail/: hwy.h
tests/: CMakeLists.txt  aes128_test.cpp  base64_test.cpp  hash_test.cpp  hex_test.cpp  str_test.cpp
